dependencies setup, added schema

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id("com.apollographql.apollo").version("2.5.2")
 }
 
 android {
@@ -35,6 +36,8 @@ android {
         jvmTarget = '1.8'
     }
 
+
+
 }
 
 dependencies {
@@ -44,7 +47,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.apollographql.apollo:apollo-runtime:2.5.2'
+    // Coroutines extensions for easier asynchronicity handling
+    implementation 'com.apollographql.apollo:apollo-coroutines-support:2.5.2'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+apollo {
+    // instruct the compiler to generate Kotlin models
+    generateKotlinModels.set(true)
 }
